refactor: Update components and context for improved type safety and readability
- Made props in VehiclePicker, AuthProvider, and ProfileProvider readonly for better immutability.
- Replaced deprecated `replace` with `replaceAll` in JWT parsing for better clarity.
- Enhanced ProfileContext to use useMemo for context value optimization.
- Updated parking type dimension parsing for consistency and clarity.
- Refactored FavoritesPage and CompactParkRow for semantic HTML and accessibility improvements.
- Improved FilterBanners and AccessibleBanner for better message handling and readability.
- Adjusted costs helpers for consistent number formatting.
- Enhanced OnboardingSteps to use AppProfile type for account types.
- Updated API base resolution to use globalThis for better compatibility.